2020-02-28  Youri Hoogstrate (v0.7.2 + v0.7.3)
    * Allows to use both 'chr7' and '7' alignments

2019-11-07  Youri Hoogstrate (v0.7.1)
    * Fix implementation

2019-11-06  Youri Hoogstrate (v0.7.0)
    * By default, exclude reads marked as PCR / optical duplicate by SAM flag

2019-06-03  Youri Hoogstrate (v0.6.0)
    * By default, exclude interchromosomal aligned mate pairs

2019-04-19  Youri Hoogstrate (v0.5.2)
    * Adds argument to add suffix to column names

2019-04-19  Youri Hoogstrate (v0.5.1)
    * Fixes small issue

2019-04-17  Youri Hoogstrate (v0.5.0)
    * Fixes a rare issue where reads containing multiple splice junctions, are still properly analysed.

2019-03-07  Youri Hoogstrate (v0.4.0)
    * Adds `-s / --spliced-reads-only` argument to detect only exon1-2 and exon1-8 spliced reads.

2019-02-18  Youri Hoogstrate (v0.3.0)
    * Exclude corner-case ambiguous reads (and become more backwards compatible with v0.1.0).

2019-02-18  Youri Hoogstrate (v0.2.0)
    * Much more efficient way of determining vIII, huge performance improvements.

2019-02-06  Youri Hoogstrate (v0.1.0)
    * First working prototype, including a functional test