@@ -32,7 +32,7 @@
 import logging
 import sys
 
-__version_info__ = ('0', '7', '3')
+__version_info__ = ('0', '7', '4')
 __version__ = '.'.join(__version_info__) if (len(__version_info__) == 3) else '.'.join(__version_info__[0:3]) + "-" + __version_info__[3]
 __author__ = 'Youri Hoogstrate'
 __homepage__ = 'https://github.com/yhoogstrate/egfr-v3-determiner'
@@ -42,4 +42,13 @@ __license_notice__ = 'License GPLv3+: GNU GPL version 3 or later <http://gnu.org
 __log_format__ = "[%(filename)s:%(lineno)s - %(funcName)s()] %(asctime)s - %(levelname)s - %(message)s"
 logging.basicConfig(level=logging.DEBUG, format=__log_format__, stream=sys.stderr)  # bioconda seems to crash on stdout here..
 log = logging.getLogger(__name__)
+
+
+EXONS_WT_DEFAULT = ['2','3']
+EXONS_VIII_DEFAULT = ['8','9']
+
+EXONS_WT_ALL = ['2','3','4','5','6','7']
+EXONS_VIII_ALL = ['8','9','10']
+
+
 
