@@ -1,3 +1,6 @@
+2020-02-28  Youri Hoogstrate (v0.7.4)
+    * Customizable exons
+
 2020-02-28  Youri Hoogstrate (v0.7.2 + v0.7.3)
     * Allows to use both 'chr7' and '7' alignments
 
